navbar shift fix

--- a/frontend-dev/app/sass/_header.sass
+++ b/frontend-dev/app/sass/_header.sass
@@ -68,17 +68,20 @@ header .top-information
 		transform: translateY(-50%)
 		right: 10px
 		width: 15px
-		filter: invert(100%) sepia(100%) saturate(1%) hue-rotate(325deg) brightness(105%) contrast(101%);	
+		filter: invert(100%) sepia(100%) saturate(1%) hue-rotate(325deg) brightness(105%) contrast(101%);
+		transition: $transition-time1
+		&:hover
+			transform: scale(1.3) translateY(-35%)
 		+media-breakpoint-down(md)
 			top: 18px
 
 
-header nav
+.navbar
 	height: 65px
-	.navbar-logo
+	&-logo
 		width: 45px
 		animation: test 2s ease 1s infinite alternate 
-	.navbar-brand
+	&-brand
 		font-family: 'Raleway', sans-serif
 		position: relative
 		margin-left: 10px
@@ -94,7 +97,7 @@ header nav
 			font-style: italic
 			text-transform: uppercase
 			margin: 0
-	.navbar-nav 
+	&-nav 
 		.nav-link
 			font-family: 'Raleway', sans-serif
 			font-weight: 600
@@ -108,31 +111,38 @@ header nav
 			color: #3458f4 !important			
 
 
+.nav-home.nav-wrapper
+	.navbar
+		background-color: rgba(255, 255, 255, 0)!important
+		&-brand
+			color: white
+		&-nav 
+			.nav-link
+				color: white
+				opacity: 0.8
+				&:hover
+					transform: scale(1.03)
+					color: white !important
+					opacity: 1
 
-.nav-home
+
+.nav-white.nav-wrapper
+	background-color: white
+	.navbar
+		background-color: rgba(255, 255, 255, 0)!important
+		&-brand
+			color: black
+		&-nav 
+			.nav-link
+				color: black
+				&:hover
+					transform: scale(1.03)
+					color: black !important
+
+.blured-background
 	background-color: rgba(167, 167, 167, 0.3)!important
 	backdrop-filter: blur(20px)
-	.navbar-brand
-		color: white
-	.navbar-nav 
-		.nav-link
-			color: white
-			opacity: 0.8
-			&:hover
-				transform: scale(1.03)
-				color: white !important
-				opacity: 1
-
-.nav-white
-	.navbar-brand
-		color: black
-	.navbar-nav 
-		.nav-link
-			color: black
-			&:hover
-				transform: scale(1.03)
-				color: black !important
-
+	
 
 
 // @keyframes test
