--- a/frontend-dev/app/sass/main.sass
+++ b/frontend-dev/app/sass/main.sass
@@ -46,7 +46,7 @@
 .heroes
 	position: relative
 	height: 100vh
-	min-height: 500px
+	min-height: 600px
 	background-color: aqua
 
 
@@ -85,13 +85,14 @@
 		margin-top: 20px
 		font-size: 19px
 		transition: $transition-time1
+		will-change: transform	
 		&:hover
 			transform: scale(1.05)
 
 
 .image-div
 	height: 100vh
-	min-height: 500px
+	min-height: 600px
 	&::before
 		content: ""
 		position: absolute
